--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   influxdb:
-    image: influxdb:latest
+    image: influxdb:1.8-alpine
     ports:
       - '8086:8086'
     volumes:
@@ -11,9 +11,10 @@ services:
       - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
       - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
   chronograf:
-    image: chronograf:latest
+    image: chronograf:1.8-alpine
     ports:
-      - '127.0.0.1:8888:8888'
+      - '8888:8888'
+        #- '127.0.0.1:8888:8888'
     volumes:
       - chronograf-storage:/var/lib/chronograf
     depends_on:
@@ -23,7 +24,7 @@ services:
       - INFLUXDB_USERNAME=${INFLUXDB_USERNAME}
       - INFLUXDB_PASSWORD=${INFLUXDB_PASSWORD}
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:7.0.6
     ports:
       - '3000:3000'
     volumes:
@@ -34,6 +35,14 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
+  telegraf:
+    image: telegraf:1.14-alpine
+    volumes:
+      - /proc:/host/proc:ro
+      - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      - HOST_PROC=/host/proc
 volumes:
   influxdb-storage:
   chronograf-storage:
